test/types/string/validation/utf8-basic.good
utf8-basic.chpl:1: error: Invalid string literal
utf8-basic.chpl:2: error: Invalid string literal
utf8-basic.chpl:3: error: Invalid string literal
