test/types/string/validation/utf8-basic.chpl
var s1 = "lorem\xffipsum";
var almostHwairFlippedBit = "\xF0\x90\x8D\xC8\x41\x42\x43"; // the 4th byte is broken
var almostHwairValidAscii = "\xF0\x90\x8D\x41\x41\x42\x43"; // the 4th byte is broken
